--- a/MoneyM/Storyboards/Base.lproj/Main.storyboard
+++ b/MoneyM/Storyboards/Base.lproj/Main.storyboard
@@ -809,7 +809,7 @@
                                                     <constraint firstAttribute="height" constant="502" id="EeN-uv-ATC"/>
                                                 </constraints>
                                                 <prototypes>
-                                                    <tableViewCell autoresizesSubviews="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="65" id="260-7v-Z5c" customClass="TransactionTableViewCellNote" customModule="MoneyM" customModuleProvider="target">
+                                                    <tableViewCell autoresizesSubviews="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="65" id="260-7v-Z5c" customClass="TotalCategoryAmountTableViewCell" customModule="MoneyM" customModuleProvider="target">
                                                         <rect key="frame" x="20" y="55.333332061767578" width="390" height="65"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="260-7v-Z5c" id="diw-gv-x82">
@@ -849,9 +849,9 @@
                                                             </constraints>
                                                         </tableViewCellContentView>
                                                         <connections>
-                                                            <outlet property="amountLabel" destination="5PL-w4-GiT" id="hU3-Tp-3iV"/>
-                                                            <outlet property="categoryImageView" destination="pY7-S3-Yo1" id="tsP-g1-hrF"/>
-                                                            <outlet property="categoryLabel" destination="gFB-PS-qn0" id="PpG-sR-chA"/>
+                                                            <outlet property="amountLabel" destination="5PL-w4-GiT" id="IR9-rW-Eqw"/>
+                                                            <outlet property="categoryImageView" destination="pY7-S3-Yo1" id="8vK-cE-wry"/>
+                                                            <outlet property="categoryTitleLabel" destination="gFB-PS-qn0" id="Nhx-St-YcS"/>
                                                         </connections>
                                                     </tableViewCell>
                                                     <tableViewCell autoresizesSubviews="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="defaultCell" rowHeight="65" id="5GE-rv-vqJ" customClass="TransactionTableViewCell" customModule="MoneyM" customModuleProvider="target">
